tests/error/invalid_declarator_of_pointer_type.c
// fail
unresolved (*3rr0r);
